# rust_local_llm

./: Cargo.toml  README.md
src/: lib.rs  main.rs
src/ollama/: errors.rs  generation.rs  mod.rs
src/speech/: errors.rs  mod.rs
src/whisper/: errors.rs  mod.rs  transcription.rs
