[package]
name = "rust_local_llm"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cmd_lib = "1.9.4"
cpal = "0.15.3"
reqwest = "0.12.4"
rodio = "0.18.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1.0.117"
tokio = { version = "1.37.0", features = ["full"] }
url = "2.5.0"
